[project]
name = "delivery-tracker-backend"
version = "1.0.0"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
lines_after_imports = 2
skip = [".venv", "__pycache__", "migrations"]

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
unsafe-fixes = true

exclude = [
    ".venv",
    "__pycache__",
    "migrations"
]

[tool.ruff.lint]
# ❗ Remove "I" so Ruff does NOT touch imports anymore
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
